doctor profile crud complete

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,4 @@
-  {
+{
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "brian2694/laravel-toastr": "^5.53",
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.5",
         "laravel/framework": "^6.2",
